--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     //add this line for firebase connection
 
     implementation 'com.google.firebase:firebase-core:16.0.0'
+
+    //for email and password authintication
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
 }
 
 // add this line for firebase connection
