--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -22,6 +23,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -29,8 +31,28 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-core:16.0.0'
 
+    //required support lib modules
+    implementation "com.android.support:appcompat-v7:26.1.0"
+    implementation "com.android.support:recyclerview-v7:26.1.0"
+    implementation "com.android.support:support-annotations:26.1.0"
+    implementation "com.android.support:design:26.1.0"
+
     //for email and password authintication
     implementation 'com.google.firebase:firebase-auth:16.0.2'
+
+    //add spinner lib
+    implementation 'com.jaredrummler:material-spinner:1.2.5'
+
+    //for accessing fire base read/write
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+
+    //to see .....
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+
+    //add this for drawer
+    implementation("com.mikepenz:materialdrawer:5.3.3@aar") {
+        transitive = true
+    }
 }
 
 // add this line for firebase connection
