--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppThemeNo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +20,13 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignupActivity" />
-        <activity android:name=".UserDetails"></activity>
+        <activity
+            android:name=".UserDetails"
+            android:theme="@style/AppThemeNo" />
+        <activity
+            android:name=".BottomNav"
+            android:label="@string/title_activity_bottom_nav"
+            android:theme="@style/AppThemeNo"/>
     </application>
 
 </manifest>
