--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation("com.mikepenz:materialdrawer:5.3.3@aar") {
         transitive = true
     }
+    //add this to access firebase storage
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
 }
 
 // add this line for firebase connection
