--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:theme="@style/AppThemeNo" >
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppThemeNo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +27,8 @@
         <activity
             android:name=".BottomNav"
             android:label="@string/title_activity_bottom_nav"
-            android:theme="@style/AppThemeNo"/>
+            android:theme="@style/AppThemeNo" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
