--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     // to support card view and recycler view
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    //add firebase storage to store imgs, vids, audios ...etc
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+
 }
 
 // add this line for firebase connection
