--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:theme="@style/AppThemeNo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,23 +19,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".Activity.HomeActivity"
             android:theme="@style/AppThemeNo" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activity.LoginActivity"
             android:theme="@style/MyActionBar" />
         <activity
-            android:name=".SignupActivity"
+            android:name=".Activity.SignupActivity"
             android:theme="@style/MyActionBar" />
         <activity
-            android:name=".UserDetails"
+            android:name=".Activity.UserDetails"
             android:theme="@style/AppThemeNo" />
         <activity
-            android:name=".BottomNav"
+            android:name=".Activity.BottomNav"
             android:label="@string/title_activity_bottom_nav"
             android:theme="@style/AppThemeNo" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".DayMealsActivity"
+        <activity android:name=".Activity.ProfileActivity" />
+        <activity
+            android:name=".Activity.DayMealsActivity"
+            android:theme="@style/AppThemeNo" />
+        <activity android:name=".Activity.MealIngrActivity"
             android:theme="@style/AppThemeNo"></activity>
     </application>
 
