--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,14 +41,12 @@
         <activity
             android:name=".Activity.MealIngrActivity"
             android:theme="@style/AppThemeNo" />
-
-
-        <activity android:name=".Activity.AdminActivity"
-            android:theme="@style/AppThemeNo"
-            ></activity>
-
-        <activity android:name=".Activity.UpdateProfileActivity"></activity>
->>>>>>> 937130ec016db27e549c14b35688d9f6f60988df
+        <activity
+            android:name=".Activity.AdminActivity"
+            android:theme="@style/AppThemeNo" />
+        <activity android:name=".Activity.UpdateProfileActivity" />
+        >>>>>>> 937130ec016db27e549c14b35688d9f6f60988df
+        <activity android:name=".Activity.AddNewMealActivity"></activity>
     </application>
 
 </manifest>
