--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     //add firebase storage to store imgs, vids, audios ...etc
     implementation 'com.google.firebase:firebase-storage:16.0.1'
 
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.github.arcadefire:nice-spinner:1.3.4'
+
 }
 
 // add this line for firebase connection
