--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         //This line is for firebase
         classpath 'com.google.gms:google-services:4.0.0'
 
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
