--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vego.vego">
 
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="17" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/MyActionBar">
         <activity
             android:name=".Activity.MainActivity"
             android:theme="@style/AppThemeNo">
@@ -23,10 +27,10 @@
             android:theme="@style/AppThemeNo" />
         <activity
             android:name=".Activity.LoginActivity"
-            android:theme="@style/MyActionBar" />
+            android:theme="@style/AppThemeNo" />
         <activity
             android:name=".Activity.SignupActivity"
-            android:theme="@style/MyActionBar" />
+            android:theme="@style/AppThemeNo" />
         <activity
             android:name=".Activity.UserDetails"
             android:theme="@style/AppThemeNo" />
