--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vego.vego">
 
-    <uses-sdk
-        android:minSdkVersion="11"
-        android:targetSdkVersion="17" />
+    <!--<uses-sdk-->
+        <!--android:minSdkVersion="11"-->
+        <!--android:targetSdkVersion="17" />-->
 
     <application
         android:allowBackup="true"
@@ -55,7 +55,6 @@
             >
         </activity>
         <activity android:name=".Activity.AddNewExerciseActivity" />
-        <activity android:name=".Adapters.ElementsAdapter"></activity>
     </application>
 
 </manifest>
