--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vego.vego">
 
-    <!--<uses-sdk-->
-        <!--android:minSdkVersion="11"-->
-        <!--android:targetSdkVersion="17" />-->
-
+    <!-- <uses-sdk -->
+    <!-- android:minSdkVersion="11" -->
+    <!-- android:targetSdkVersion="17" /> -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -51,10 +50,10 @@
         <activity android:name=".Activity.UpdateProfileActivity" />
         <activity
             android:name=".Activity.AddNewMealActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan">
-            >
-        </activity>
+            android:windowSoftInputMode="stateVisible|adjustPan"></activity>
         <activity android:name=".Activity.AddNewExerciseActivity" />
+        <activity android:name=".Activity.ActivityWorkoutUser" />
+        <activity android:name=".Activity.ActivityInsideExercise"></activity>
     </application>
 
 </manifest>
