--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vego.vego">
 
-
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <!-- To auto-complete the email text field in the login form with the user’s emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
 
     <application
         android:allowBackup="true"
@@ -57,11 +55,11 @@
         <activity android:name=".Activity.UpdateProfileActivity" />
         <activity
             android:name=".Activity.AddNewMealActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"></activity>
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity android:name=".Activity.AddNewExerciseActivity" />
         <activity android:name=".Activity.ActivityWorkoutUser" />
-
-        <activity android:name=".Activity.ActivityInsideExercise"></activity>
+        <activity android:name=".Activity.ActivityInsideExercise" />
+        <activity android:name=".Activity.PasswordActivity"></activity>
     </application>
 
 </manifest>
