--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     //to make gif moves
     implementation 'com.koushikdutta.ion:ion:2.+'
 
+    //facebook login
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
 
 }
 
