--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     //to make gif moves
     implementation 'com.koushikdutta.ion:ion:2.+'
 
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+
     //facebook login
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
