--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,10 @@ dependencies {
 
     implementation 'com.sendbird.sdk:sendbird-android-sdk:3.0.54'
 
+    //progressbar precentage
+    implementation 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
+
+
 
 }
 
