--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     //progressbar precentage
     implementation 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     implementation 'com.facebook.android:facebook-login:4.36.1'
+
+    implementation 'com.github.ATHBK:UltimateTabLayout:1.3.0'
+
 }
 
 // add this line for firebase connection
