--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,7 @@
 
     <!-- To give intrent access to the app -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- To auto-complete the email text field in the login form with the user’s emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -17,10 +15,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:hardwareAccelerated="false"
-
-
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@drawable/icon_home"
         android:label="SCIFIT"
         android:largeHeap="true"
@@ -28,28 +24,27 @@
         android:supportsRtl="true"
         android:theme="@style/MyActionBar">
 
-
         <!-- To auto-sign in using facebook -->
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
-
-
         <activity
             android:name=".Activity.MainActivity"
             android:theme="@style/AppThemeNo">
@@ -64,22 +59,23 @@
             android:theme="@style/AppThemeNo" />
         <activity
             android:name=".Activity.LoginActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"
-            android:theme="@style/AppThemeNo" />
+            android:theme="@style/AppThemeNo"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.SignupActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"
-            android:theme="@style/AppThemeNo" />
+            android:theme="@style/AppThemeNo"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.UserDetails"
-            android:windowSoftInputMode="stateVisible|adjustPan"
-            android:theme="@style/AppThemeNo" />
+            android:theme="@style/AppThemeNo"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.BottomNav"
-            android:label="@string/title_activity_bottom_nav"
-            android:theme="@style/AppThemeNo" />
-        <activity android:name=".Activity.ProfileActivity"
+            android:theme="@style/AppThemeNo"
             android:windowSoftInputMode="stateVisible|adjustPan"/>
+        <activity
+            android:name=".Activity.ProfileActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.DayMealsActivity"
             android:theme="@style/AppThemeNo" />
@@ -93,13 +89,26 @@
         <activity
             android:name=".Activity.AddNewMealActivity"
             android:windowSoftInputMode="stateVisible|adjustPan" />
-        <activity android:name=".Activity.AddNewExerciseActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
+        <activity
+            android:name=".Activity.AddNewExerciseActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity android:name=".Activity.ActivityWorkoutUser" />
-        <activity android:name=".Activity.ActivityInsideExercise"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
-        <activity android:name=".Activity.PasswordActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
+        <activity
+            android:name=".Activity.ActivityInsideExercise"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
+        <activity
+            android:name=".Activity.PasswordActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
+
+        <service android:name=".model.MyFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".Service.MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
