--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,21 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.vego.vego"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -26,38 +32,34 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    //add this line for firebase connection
-    implementation 'com.google.firebase:firebase-core:16.0.0'
     //required support lib modules
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:support-annotations:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     //for email and password authintication
-    implementation 'com.google.firebase:firebase-auth:16.0.2'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
     //sign in with google
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     //add spinner lib
     implementation 'com.jaredrummler:material-spinner:1.2.5'
     //for accessing fire base read/write
-    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
     //to see .....
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
     //add this for drawer
     implementation('com.mikepenz:materialdrawer:5.3.3@aar') {
         transitive = true
     }
-    //add this to access firebase storage
-    implementation 'com.google.firebase:firebase-storage:16.0.1'
     // to support card view and recycler view
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     //add firebase storage to store imgs, vids, audios ...etc
-    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    implementation 'com.google.firebase:firebase-storage:16.0.3'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.android.support:design:26.1.0'
     //spinner
@@ -73,7 +75,24 @@ dependencies {
     implementation 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     implementation 'com.facebook.android:facebook-login:4.36.1'
 
-    implementation 'com.github.ATHBK:UltimateTabLayout:1.3.0'
+    implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4'
+
+    // Add dependency
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+
+    //for adding request
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //adding circular imageview
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    //adding tooltip (muscles name in trackprogress)
+    implementation 'com.github.spyhunter99:super-tooltip-aar:4.0.2'
+
+
 
 }
 
