--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,21 @@ buildscript {
     
     repositories {
         google()
+        // Add repository
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         jcenter()
+
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-alpha17'
         //This line is for firebase
         classpath 'com.google.gms:google-services:4.0.0'
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.25.4'
 
 
 
@@ -22,7 +31,15 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
+        // Add repository
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
