--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,10 @@ dependencies {
     //adding tooltip (muscles name in trackprogress)
     implementation 'com.github.spyhunter99:super-tooltip-aar:4.0.2'
 
+    //navigation bottom awesome
+    implementation 'com.github.armcha:Space-Navigation-View:1.6.0'
+
+
 
 
 }
