--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,24 +27,26 @@
         tools:replace="android:label">
 
         <!-- To auto-sign in using facebook -->
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity
             android:name="com.facebook.FacebookActivity"
-            android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
-                <action
-                    android:name="android.intent.action.VIEW" />
-                <category
-                    android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activity.MainActivity"
             android:theme="@style/AppThemeNo">
@@ -72,7 +74,7 @@
         <activity
             android:name=".Activity.BottomNav"
             android:theme="@style/AppThemeNo"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.ProfileActivity"
             android:windowSoftInputMode="stateVisible|adjustPan" />
@@ -100,17 +102,23 @@
             android:name=".Activity.PasswordActivity"
             android:windowSoftInputMode="stateVisible|adjustPan" />
 
-        <service android:name=".model.MyFirebaseInstanceIdService">
+        <service
+            android:name=".Service.FirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <service
-            android:name=".Service.MyFirebaseMessagingService"
-            android:enabled="true"
-            android:exported="true" />
+            android:name=".model.MyFirebaseInstanceIdService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
 
-
+        <activity android:name=".Activity.InsideChatActivity"></activity>
     </application>
 
 </manifest>
