--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.kotlin_version = '1.3.10'
+
     repositories {
         google()
         // Add repository
@@ -19,8 +20,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.0.0'
         // Add dependency
         classpath 'io.fabric.tools:gradle:1.25.4'
-
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
