--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         </activity>
         <activity
             android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNo">
             <intent-filter>
                 <action android:name="OPEN_ACTIVITY_1" />
@@ -63,10 +64,12 @@
         </activity>
         <activity
             android:name=".Activity.HomeActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNo" />
         <activity
             android:name=".Activity.LoginActivity"
             android:theme="@style/AppThemeNo"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.SignupActivity"
@@ -75,36 +78,51 @@
         <activity
             android:name=".Activity.UserDetails"
             android:theme="@style/AppThemeNo"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.BottomNav"
             android:theme="@style/AppThemeNo"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.ProfileActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.DayMealsActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNo" />
         <activity
             android:name=".Activity.MealIngrActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNo" />
         <activity
             android:name=".Activity.AdminActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNo" />
-        <activity android:name=".Activity.UpdateProfileActivity" />
+        <activity
+            android:name=".Activity.UpdateProfileActivity"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".Activity.AddNewMealActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan" />
+            android:windowSoftInputMode="stateVisible|adjustPan"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".Activity.AddNewExerciseActivity"
-            android:windowSoftInputMode="stateVisible|adjustPan" />
+            android:windowSoftInputMode="stateVisible|adjustPan"
+            android:screenOrientation="portrait"
+            />
         <activity android:name=".Activity.ActivityWorkoutUser" />
         <activity
             android:name=".Activity.ActivityInsideExercise"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".Activity.PasswordActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
 
         <service
